Return immutable Guava types where possible, make delimiter constant Javadocs consistent